# apps/api/src/controllers/posts/handlers/list.handler.ts
@@ -1,0 +1,29 @@
+import { prisma } from "../../../lib/prisma"
+
+export const listPosts = async (filter: string) => {
+    if (!filter) {
+        filter = ""
+    }
+    return await prisma.post.findMany({
+        where: {
+            OR: [
+                {
+                    title: {
+                        contains: filter
+                    }
+                },
+                {
+                    content: {
+                        contains: filter
+                    }
+                },
+
+                {
+                    description : {
+                        contains: filter
+                    }
+                }
+            ]
+        }
+    })
+}
